# nog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md
examples/: hello.nog
source/compiler/: assembler.cpp  assembler.hpp  compile_to_c.cpp  compile_to_ir.cpp  compile_to_x64.cpp  compiler.cpp  compiler.hpp  config.cpp  config.hpp  linker.hpp  main.cpp  node.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  ssa.hpp  token.hpp  x64.cpp  x64.hpp
source/core/: buffer.cpp  buffer.hpp  compare.hpp  console.hpp  dictionary.hpp  file.hpp  hash.hpp  list.hpp  math.hpp  memory.cpp  memory.hpp  string.cpp  string.hpp  system.hpp  types.hpp
source/core/standard/: console.cpp  file.cpp  math.cpp  memory.cpp  string.cpp  system.cpp
tests/: build.bat  build.sh  main.nog
tests/output/: main.c  main.h
